# vue-oxc-toolkit

./: .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAPPING.md  README.md  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
benchmark/: Cargo.toml  large.vue  medium.vue  small.vue
benchmark/benches/: jsx.rs  parse.rs
crates/vue_oxc_toolkit/: Cargo.toml  README.md
crates/vue_oxc_toolkit/fixtures/: basic.vue  components.vue  example.vue  tags.vue  typescript.vue
crates/vue_oxc_toolkit/fixtures/directive/: basic.vue  v-bind.vue  v-for-error.vue  v-if-error.vue  v-if.vue  v-slot.vue
crates/vue_oxc_toolkit/fixtures/error/: irrecoverable-directive.vue  irrecoverable-script.vue  recoverable-directive.vue  recoverable-script.vue  script.vue  template.vue
crates/vue_oxc_toolkit/fixtures/scripts/: directives.vue  invaild-export.vue
crates/vue_oxc_toolkit/src/: irregular_whitespaces.rs  lib.rs  test.rs
crates/vue_oxc_toolkit/src/parser/: error.rs  implement.rs  mod.rs  modules.rs  parse.rs  script.rs  semantic.rs  tags.rs  test_safety.rs  utils.rs  v_for.rs
crates/vue_oxc_toolkit/src/parser/directive/: mod.rs  v_bind.rs  v_for.rs  v_slot.rs
crates/vue_oxc_toolkit/src/parser/elements/: directive.rs  mod.rs  v_for.rs  v_if.rs  v_slot.rs
crates/vue_oxc_toolkit/src/parser/snapshots/: vue_oxc_semantic__parser__parse__tests__basic_vue-2.snap  vue_oxc_semantic__parser__parse__tests__basic_vue.snap  vue_oxc_toolkit__parser__parse__tests__basic_vue.snap  vue_oxc_toolkit__parser__parse__tests__errors-2.snap  vue_oxc_toolkit__parser__parse__tests__errors-4.snap  vue_oxc_toolkit__parser__parse__tests__errors-6.snap  vue_oxc_toolkit__parser__parse__tests__errors.snap
crates/vue_oxc_toolkit/src/parser/snapshots/ast/: basic_vue.snap  basic_vue.snap.new  comments_vue.snap  comments_vue.snap.new  components_vue.snap  directive_basic_vue.snap  directive_basic_vue.snap.new  directive_v-bind_vue.snap  directive_v-for-error_vue.snap  directive_v-for-error_vue.snap.new  directive_v-for_vue.snap  directive_v-for_vue.snap.new  directive_v-if-error_vue.snap  directive_v-if_vue.snap  directive_v-if_vue.snap.new  directive_v-slot_vue.snap  directive_v-slot_vue.snap.new  error_directive_vue.snap  error_empty_multiple_scripts_vue.snap  error_interpolation_vue.snap  error_irrecoverable-directive_vue.snap  error_irrecoverable-script_vue.snap  error_multiple_langs_vue.snap  (+22 more)
crates/vue_oxlint_parser/: Cargo.toml
crates/vue_oxlint_parser/fixtures/: directives.vue  script_setup.vue  typescript.vue
crates/vue_oxlint_parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  sfc.rs  source.rs  template.rs  token.rs
crates/vue_oxlint_parser/src/ast/: expr.rs  mod.rs
crates/vue_oxlint_parser/src/ast/bindings/: mod.rs
crates/vue_oxlint_parser/src/ast/nodes/: attribute.rs  directive.rs  elements.rs  javascript.rs  mod.rs
crates/vue_oxlint_parser/src/lexer/: mod.rs  source.rs  token.rs
crates/vue_oxlint_parser/src/parser/: attr.rs  element.rs  error.rs  expression.rs  mod.rs  script.rs  sfc.rs  template.rs
crates/vue_oxlint_parser/src/test/: mod.rs
crates/vue_oxlint_parser/tests/: ast_fixtures.rs
crates/vue_oxlint_parser/tests/fixtures/: expected-failures.txt
(+101 files in other folders)
