[package]
name = "vue_oxlint_parser"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust port of vue-eslint-parser: AST types and SFC parser for Vue single-file components."

[dependencies]
oxc_allocator = { workspace = true, features = ["serialize"] }
oxc_ast = { workspace = true, features = ["serialize"] }
oxc_diagnostics = { workspace = true }
oxc_estree = { workspace = true, features = ["serialize"] }
oxc_parser = { workspace = true }
oxc_span = { workspace = true, features = ["serialize"] }
oxc_str = { workspace = true, features = ["serialize"] }

memchr = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
